--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^18.2.77",
     "@types/react-dom": "^18.2.25",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-select-async-paginate": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
